--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ plugins: ['jekyll/scholar']
 
 # Site settings
 title: Achim Randelhoff
-email: a@r.ul
+email: me@me
 description: "Arctic Oceanography"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: FFFFFF
+  primary: 2262c9
   secondary: 00FFFF
   secondary-dark: 333
 
@@ -26,14 +26,16 @@ permalink: pretty
 
 # Bibliography settings
 scholar:
-  style: american-meteorological-society
+  # style: american-meteorological-society
+  style: american-geophysical-union
+  # style: agufull08.bst
   locale: en
 
   sort_by: year
   order: ascending
 
   source: ./_bibliography
-  bibliography: references.bib
+  bibliography: webpage_refs.bib
   bibliography_template: bib
 
   replace_strings: true
