--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ color:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: envelope
-    url: mailto:me
+    url: mailto:achim.randelhoff@takuvik.ulaval.ca
   - title: github
     url: http://github.com/poplarshift
 
